# sa_regex

./: .gitignore  CMakeLists.txt  benchmark.cpp  run_tests.cpp  test.cpp  test.py  test_set_2.json
include/regex/: build_state_machine.hpp  builder.hpp  compiler.hpp  opcode.hpp  reTree.hpp  re_compiler.hpp  re_tree.hpp  regex.hpp  sa_regex.hpp  state_machine.hpp  state_machine_executor.hpp  state_machine_export.hpp  tests.hpp  tree.hpp  tree_machine.hpp  util.hpp
src/: build_state_machine.cpp  builder.cpp  compiler.cpp  opcode.cpp  reTree.cpp  re_compiler.cpp  re_tree.cpp  re_util.cpp  sa_regex.cpp  state_machine.cpp  state_machine_executor.cpp  state_machine_export.cpp  tests.cpp  tree_machine.cpp  util.cpp
tests/: test_set_1.json
